docs/evidence/otel-backend-native-20260913/nsg-after.json
[
  {
    "access": "Allow",
    "destinationAddressPrefix": "*",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "53",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"fe2b294e-ac28-4961-9127-a69bcb91f33d\"",
    "id": "/subscriptions/1b191b4c-2968-420a-b275-5087e94bf355/resourceGroups/agentdns-port-validation-20260913/providers/Microsoft.Network/networkSecurityGroups/agentdns-secondary-vm-nsg/securityRules/allow-dns-tcp",
    "name": "allow-dns-tcp",
    "priority": 100,
    "protocol": "Tcp",
    "provisioningState": "Succeeded",
    "resourceGroup": "agentdns-port-validation-20260913",
    "sourceAddressPrefix": "*",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  },
  {
    "access": "Allow",
    "destinationAddressPrefix": "*",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "53",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"fe2b294e-ac28-4961-9127-a69bcb91f33d\"",
    "id": "/subscriptions/1b191b4c-2968-420a-b275-5087e94bf355/resourceGroups/agentdns-port-validation-20260913/providers/Microsoft.Network/networkSecurityGroups/agentdns-secondary-vm-nsg/securityRules/allow-dns-udp",
    "name": "allow-dns-udp",
    "priority": 110,
    "protocol": "Udp",
    "provisioningState": "Succeeded",
    "resourceGroup": "agentdns-port-validation-20260913",
    "sourceAddressPrefix": "*",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  },
  {
    "access": "Allow",
    "description": "Isolated authenticated OTel TLS from observed test authority egress only",
    "destinationAddressPrefix": "10.71.0.4",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "4318",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"fe2b294e-ac28-4961-9127-a69bcb91f33d\"",
    "id": "/subscriptions/1b191b4c-2968-420a-b275-5087e94bf355/resourceGroups/agentdns-port-validation-20260913/providers/Microsoft.Network/networkSecurityGroups/agentdns-secondary-vm-nsg/securityRules/agentdns-otel-https-from-primary",
    "name": "agentdns-otel-https-from-primary",
    "priority": 150,
    "protocol": "Tcp",
    "provisioningState": "Succeeded",
    "resourceGroup": "agentdns-port-validation-20260913",
    "sourceAddressPrefix": "20.82.173.102/32",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  }
]
